--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ body {
 
 /* Stats Section */
 .stats-section {
-    background: rgba(77, 71, 255, 0.1);
+    /* background: rgba(77, 71, 255, 0.1); */
     padding: 50px 141px;
     border-radius: 24px;
     margin: 100px 141px;
